# topviewrace

./: README.md  pyproject.toml
maps/: maps.json
src/: car.py  game_loop.py  main.py  main_menu.py  track.py  ui.py
